--- a/views/contact.gohtml
+++ b/views/contact.gohtml
@@ -1,9 +1,11 @@
-<h1>Get in touch!</h1>
-<p>
-    To get in touch, please send an email to
-    <a href="mailto:support@madlens.io">
-        support@madlens.io
-    </a>
-</p>
+{{ define "yield" }}
+    <h1>Get in touch!</h1>
+    <p>
+        To get in touch, please send an email to
+        <a href="mailto:support@madlens.io">
+            support@madlens.io
+        </a>
+    </p>
 
-{{ template "footer" }}
+    {{ template "footer" }}
+{{ end }}
