--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -14,6 +14,7 @@
                     <a class="nav-link" href="/contact">Contact</a>
                 </li>
             </ul>
+            <a class="nav-link" href="/signup">Sign Up</a>
         </div>
     </nav>
 {{ end }}
