Starting to print dynamic error using Bootstrap alerts.

--- a/views/layouts/bootstrap.gohtml
+++ b/views/layouts/bootstrap.gohtml
@@ -7,8 +7,11 @@
     </head>
     <body>
         {{ template "navbar" }}
-        <div class="container-fluid">
-            {{ template "yield" .  }}
+        <div class="container-fluid px-4 py-4">
+            {{ if .Alert }}
+                {{ template "alert" .Alert }}
+            {{ end }}
+            {{ template "yield" .Yield }}
             {{ template "footer" }}
         </div>
 
