--- a/views/galleries/new.gohtml
+++ b/views/galleries/new.gohtml
@@ -17,7 +17,8 @@
     <form action="/galleries" method="POST">
         <div class="form-group">
             <label for="title">Title</label>
-            <input type="text" name="title" class="form-control" id="title" placeholder="What is the title of your gallery?">
+            <input type="text" name="title" class="form-control" id="title"
+                   placeholder="What is the title of your gallery?">
         </div>
         <button type="submit" class="btn btn-primary">Create</button>
     </form>
