--- a/views/users/login.gohtml
+++ b/views/users/login.gohtml
@@ -17,7 +17,8 @@
     <form action="/login" method="POST">
         <div class="form-group">
             <label for="email">Email address</label>
-            <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Email">
+            <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp"
+                   placeholder="Email">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
