--- a/views/users/new.gohtml
+++ b/views/users/new.gohtml
@@ -21,7 +21,8 @@
         </div>
         <div class="form-group">
             <label for="email">Email address</label>
-            <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Email">
+            <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp"
+                   placeholder="Email">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
