--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -21,5 +21,6 @@
                    placeholder="What is the title of your gallery?" value="{{.Title}}">
         </div>
         <button type="submit" class="btn btn-primary">Update</button>
+        <button type="submit" class="btn btn-danger" formaction="/galleries/{{.ID}}/delete">Delete</button>
     </form>
 {{ end }}
