--- a/views/layouts/bootstrap.gohtml
+++ b/views/layouts/bootstrap.gohtml
@@ -8,7 +8,7 @@
               crossorigin="anonymous">
     </head>
     <body>
-    {{ template "navbar" }}
+    {{ template "navbar" . }}
     <div class="container-fluid px-4 py-4">
         {{ if .Alert }}
             {{ template "alert" .Alert }}
