--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -1,26 +1,77 @@
 {{ define "yield" }}
     <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <div class="card border-primary">
-                <h5 class="card-header bg-primary text-white">
-                    Edit your gallery
-                </h5>
-                <div class="card-body">
-                    {{ template "editGalleryForm" .}}
-                </div>
-            </div>
+        <div class="col-md-10 offset-md-1">
+            <h2>Edit your gallery</h2>
+            <hr>
+        </div>
+        <div class="col-md-12">
+            {{ template "editGalleryForm" . }}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-1">
+            <label class="control-label">
+                Images
+            </label>
+        </div>
+        <div class="col-md-10">
+            {{ template "galleryImages" . }}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            {{ template "uploadImagesForm" . }}
+        </div>
+    </div>
+    <div class="row py-5">
+        <div class="col-md-10 offset-md-1">
+            <h2>Dangerous button...</h2>
+            <hr>
+        </div>
+        <div class="col-md-10 offset-md-1">
+            {{ template "deleteGalleryForm" . }}
         </div>
     </div>
 {{ end }}
 
 {{ define "editGalleryForm" }}
     <form action="/galleries/{{.ID}}/update" method="POST">
-        <div class="form-group">
-            <label for="title">Title</label>
-            <input type="text" name="title" class="form-control" id="title"
-                   placeholder="What is the title of your gallery?" value="{{.Title}}">
+        <div class="form-group row">
+            <label for="title" class="col-md-1 col-form-label">Title</label>
+            <div class="col-md-10">
+                <input type="text" name="title" class="form-control" id="title"
+                       placeholder="What is the title of your gallery?" value="{{.Title}}">
+            </div>
+            <div class="col-md-1">
+                <button type="submit" class="btn btn-primary">Save</button>
+            </div>
         </div>
-        <button type="submit" class="btn btn-primary">Update</button>
-        <button type="submit" class="btn btn-danger" formaction="/galleries/{{.ID}}/delete">Delete</button>
+    </form>
+{{ end }}
+
+{{ define "galleryImages" }}
+    <p>Coming soon...</p>
+{{ end }}
+
+{{ define "uploadImagesForm" }}
+    <form action="/galleries/{{.ID}}/images" method="POST" enctype="multipart/form-data">
+        <div class="form-group row">
+            <label for="images" class="col-md-1 col-form-label">Add Images</label>
+            <div class="col-md-10">
+                <input type="file" multiple class="form-control-file" id="images" name="images" aria-describedby="file-help-block">
+                <small id="file-help-block" class="form-text text-muted">
+                    Please use only jpg, jpeg, and png.
+                </small>
+                <button type="submit" class="btn btn-primary">Upload</button>
+            </div>
+        </div>
+    </form>
+{{ end }}
+
+{{ define "deleteGalleryForm" }}
+    <form action="/galleries/{{.ID}}/delete" method="POST">
+        <div class="form-group">
+            <button type="submit" class="btn btn-danger">Delete</button>
+        </div>
     </form>
 {{ end }}
