--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -50,7 +50,13 @@
 {{ end }}
 
 {{ define "galleryImages" }}
-    <p>Coming soon...</p>
+    <ul>
+        {{ range .Images }}
+            <li>
+                {{ . }}
+            </li>
+        {{ end }}
+    </ul>
 {{ end }}
 
 {{ define "uploadImagesForm" }}
