--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -2,6 +2,9 @@
     <div class="row">
         <div class="col-md-10 offset-md-1">
             <h2>Edit your gallery</h2>
+            <a href="/galleries/{{.ID}}">
+                View this gallery
+            </a>
             <hr>
         </div>
         <div class="col-md-12">
@@ -50,13 +53,22 @@
 {{ end }}
 
 {{ define "galleryImages" }}
-    <ul>
-        {{ range .Images }}
-            <li>
-                {{ . }}
-            </li>
-        {{ end }}
-    </ul>
+    <div class="row">
+    {{ range .ImagesSplitN 6 }}
+        <div class="col-md-2">
+            {{ range . }}
+                <a href="{{.}}">
+                    <img src="{{.}}" class="thumbnail">
+                </a>
+            {{ end }}
+        </div>
+    {{ end }}
+    </div>
+    <style>
+        .thumbnail {
+            width: 100%;
+        }
+    </style>
 {{ end }}
 
 {{ define "uploadImagesForm" }}
